--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  height: 100%;
+}
+body {
+  background-color: #0d1117;
+  height: 100%;
+}
